# dynamic_loading_project

./: Cargo.toml
actual_program/: Cargo.toml
actual_program/src/: main.rs  shared_api.rs
reloadable_lib/: Cargo.toml
reloadable_lib/src/: lib.rs
