[package]
name = "reloadable_lib"
version = "0.1.0"
authors = ["Arek <arkadiuszzylkowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reloadable"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
live-reload = "0.2.0"